--- a/linear-gradient/index.html
+++ b/linear-gradient/index.html
@@ -7,9 +7,8 @@
 
   <body>
     <main>
-      <!-- BEGIN LINEAR-GRADIENT: DEFAULT -->
       <details>
-        <summary><span>Default</span></summary>
+        <summary>Default</summary>
         <div class="linear-gradient-default" />
       </details>
       <!-- END LINEAR-GRADIENT: DEFAULT -->
@@ -21,12 +20,30 @@
       </details>
       <!-- END LINEAR-GRADIENT: TILTED 45 DEGREES -->
 
-       <!-- BEGIN LINEAR-GRADIENT: GOING FROM THE   -->
-       <details>
+      <!-- BEGIN LINEAR-GRADIENT: GOING FROM THE   -->
+      <details>
         <summary><span>To Left Top</span></summary>
         <div class="linear-gradient-to-left-top" />
       </details>
       <!-- END LINEAR-GRADIENT TILTED 45 DEGREES -->
+
+      <!-- BEGIN LINEAR-GRADIENT: GOING FROM THE   -->
+      <details>
+        <summary><span>Radial Gradient</span></summary>
+        <div class="radial-gradient" />
+      </details>
+      <!-- END LINEAR-GRADIENT TILTED 45 DEGREES -->
+
+      <details>
+        <summary><span>Text Shadow</span></summary>
+        <h1 class="text-shadow">Text Shadow</h1>
+      </details>
+
+      
+      <details>
+        <summary><span>Box Shadow</span></summary>
+        <div class="box-shadow"></div>
+      </details>
     </main>
   </body>
 </html>
